[package]
name = "rrr"
version = "0.1.0"
edition = "2024"

[dependencies]
#gstreamer-sys = "0.23.5"
anyhow = "1.0.95" # General Error Type
async-channel = "2.1.0"
chrono = "0.4.42"
clap = { version = "4.5.31", features = ["derive"] }
compile-time = "0.2.0"
crossterm = { version ="0.29"  , features = ["event-stream"] }
futures = "0.3.31"
futures-util = "0.3.31"
glib = "0.21.3"
gstr = "0.2.0"
gstreamer = "0.24.2"
gstreamer-audio = "0.24.2"
hex = "0.4.3"
humantime-serde = "1.1.1"
parse = "0.1.2"
pin-project = "1.1.3"
pnet = "0.35.0"
pnet_datalink = "0.35.0" # used to get the local IP address
rand = "0.9.1"
serde = { version = "1.0.193", features = ["derive", "rc"] }
substring = "1.4.5"
sys-mount = "3.0.1"
thousands = "0.2.0"
tokio = { version = "1.43.0", features = ["rt", "io-util", "net", "time", "macros", "sync"] }
tokio-stream = "0.1.17" 
toml = "0.9.7"
unidecode = "0.3.0" # encode unicode into lcd screen encoding
libc = "0.2.172"
eject = "0.1.1"
nix = { version = "0.30.1", features = ["ioctl", "socket"] }
socket = "0.0.7"
rppal = "0.22.1"
icmp = "0.3.0"
tokio-icmp-echo = "0.4.3"
#nix = "0.26"
socket2 = {version ="0.6.0", features = ["all"]}
pnet_packet = "0.35.0"
axum = "0.8.6"
maud = { version = "0.27.0", features = ["axum"] }
memory-serve = "1.2.1"
