[package]
name = "rrr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95" # General Error Type
axum = "0.8.6"
chrono = "0.4.42"
compile-time = "0.2.0"
crossterm = { version ="0.29"  , features = ["event-stream"] }
eject = "0.1.1"
env = "1.0.1"
futures-util = "0.3.31"
glib = "0.21.3"
gstreamer = "0.24.2"
gstreamer-audio = "0.24.2"
hex = "0.4.3"
html-macro = "0.2.5"
humantime-serde = "1.1.1"
libc = "0.2.172"
maud = { version = "0.27.0", features = ["axum"] }
memory-serve = "1.2.1"
nix = { version = "0.31.0", features = ["ioctl", "socket"] }
rand = "0.9.1"
reqwest = "0.13.1"
rppal = "0.22.1"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = "1.0.148"
string-replace-all = "0.2.1"
substring = "1.4"
sys-mount = "3.0.1"
tokio = { version = "1.43", features = ["rt", "io-util", "net", "time", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.9.7"
unidecode = "0.3.0" # encode unicode into lcd screen encoding
